# BadWDSD_WithREADME

./: README.md  qcfwgen0.sh
BadWDSD/: build.sh
BadWDSD-SW/: Makefile
BadWDSD-SW/source/: Asm.S  Glitcher.cpp  Glitcher.h  Include.h  LoadLv2Kernel.cpp  LoadLv2Kernel.h  Logging.cpp  Logging.h  Lv1.cpp  Lv1.h  Lv1Exec.cpp  Lv1Exec.h  Lv2.cpp  Lv2.h  Main.cpp  Main.cppold  Main.cppold2  Main.cppold3  OurAsm.S  Spu.cpp  Spu.h  Stage1 (copy).c.bak  Stage1 (copy).c.old  Stage1 (copy).c.old.notworkingagain  Stage1 (copy).c.old.working  Stage1 (copy).c.old2  Utils.cpp  Utils.h  Xorhack.cpp  Xorhack.h  mm.cpp  mm.h
BadWDSD-Stage/: Spu.c  Stage0.S  Stage0.ld  Stage1.c  Stage2.c  Stage2j.S  Stage3.c  Stage3j.S  Stage3ja.S  Stage3jz.S  Stage3jz.ld  Stage5.c  Stage5j.S  Stagex.c  Stagex.ld  build.sh  notes.txt
BadWDSD-Stage/Aes/: Aes.c
BadWDSD-Stage/tinf/: tinflate.c
BadWDSD/BadWDSD/: Aes.c  Aes.h  CMakeLists.txt  DebugUart.c  Gpio.c  Hold.c  Include.h  Led.c  Main.c  Sc.c  Timer.c  Uart.c  Xdr.c
patches/: build.sh  disable_erase_hash_standby_bank_and_fsm.S  patch_fsm.S  patch_get_applicable_version.c  patch_get_version_and_hash.c
spu/: build.sh  testspu.S
spu/appldr/: lv2hashgen.elf  notes.txt
tools/Aes/: Aes.c  Aes.h
tools/XdrPacketParser/: XdrPacketParser.cpp  build.sh
tools/coreos_tools/: build.sh  coreos_tools  coreos_tools.cpp
tools/dtbImage_ps3_bin_to_elf/: build.sh  dtbImage_ps3_bin_to_elf  dtbImage_ps3_bin_to_elf.cpp
tools/lv0gen/: build.sh  lv0gen  lv0gen.cpp
tools/lv1gen/: build.sh  lv1gen  lv1gen.cpp
tools/lv2gen/: build.sh  lv2gen  (+1 more)
(+11 files in other folders)
